Can insert new account now.

--- a/templates/AccountList.html
+++ b/templates/AccountList.html
@@ -63,6 +63,16 @@
 
 {% endblock %}
 
+{% block navbarBottom %}
+    <table class="navbar-base navbar-bottom">
+        <tr>
+            <td class="navbar-ls">
+                <a class="btn btn-primary navbar-link" href="/addNewAccount">Neuen Account erstellen</a>
+            </td>
+        </tr>
+    </table>
+{% endblock %}
+
 <!-- ------------------------------------------------------------------ -->
 <!--                        JavaScript (AngularJS)                      -->
 <!-- ------------------------------------------------------------------ -->
