Can delete account objects from database.

--- a/templates/AccountList.html
+++ b/templates/AccountList.html
@@ -37,7 +37,7 @@
             <li><a href="/showPassword/<< tableModel[selectedIndex].id >>">Passwort anzeigen</a></li>
             <li><a href="/editAccount/<< tableModel[selectedIndex].id >>">Eintrag editieren</a></li>
             <li><a href="/generatePwd/<< tableModel[selectedIndex].id >>">Passwort generieren</a></li>
-            <li><a>Eintrag l&ouml;schen</a></li>
+            <li><a href="/deleteAccount/<< tableModel[selectedIndex].id >>">Eintrag l&ouml;schen</a></li>
             <li role="separator" class="divider"></li>
             <li><a ng-click="cancelSelection()">Abbrechen</a></li>
         </ul>
